--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
 
                 <div class="col-md-8 col-lg-6">
-                    <img src="marioblock.png" class="mario" alt="mario ? block" id="img2" onclick="changeImage()">
+                    <img src="img/marioblock.png" class="mario" alt="mario ? block" id="img2" onclick="changeImage()">
                     <img class="cover" id ="cov">
                 </div>
             </div>
@@ -57,7 +57,7 @@
                     var greet = document.getElementById("hi");
                     if (image.src.match("marioblock")) 
                     {
-                        image.src = "final.png";
+                        image.src = "img/final.png";
                         image.style.width = "600px";
                         image.style.height = "600px";
                         image.style.marginTop = "-20px";
