--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         
-        <link rel="stylesheet" href="DCmixtape/index.css"/>
+        <link rel="stylesheet" href="/DCmixtape/index.css"/>
     
     </head>
         <body>
@@ -42,7 +42,7 @@
                 </div>
 
                 <div class="col-md-8 col-lg-6">
-                    <img src="img/marioblock.png" class="mario" alt="mario ? block" id="img2" onclick="changeImage()">
+                    <img src="/DCmixtape/marioblock.png" class="mario" alt="mario ? block" id="img2" onclick="changeImage()">
                     <img class="cover" id ="cov">
                 </div>
             </div>
@@ -57,7 +57,7 @@
                     var greet = document.getElementById("hi");
                     if (image.src.match("marioblock")) 
                     {
-                        image.src = "img/final.png";
+                        image.src = "/DCmixtape/final.png";
                         image.style.width = "600px";
                         image.style.height = "600px";
                         image.style.marginTop = "-20px";
