--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         
-        <link rel="stylesheet" href="DCmixtape/index.css"/>
+        <link rel="stylesheet" type="text/css" href="index.css/">
     
     </head>
         <body>
