--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
         <body style="background-color: #f7ce5f;">
             <div class="container-fluid"> 
-                <div class="col-md-8 col-lg-6">
+                <div class="col-sm-8 col-md-8 col-lg-6">
                     <h1 class="hello" id="hi">Hi Daniel, I made you __________ :-)</h1>
                     <h3 class="clickTxt">Click on it ---></h3>
 
@@ -41,7 +41,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-8 col-lg-6">
+                <div class="col-sm-8 col-md-8 col-lg-6">
                     <img src="/DCmixtape/marioblock.png" class="mario" alt="mario ? block" id="img2" onclick="changeImage()">
                     <img class="cover" id ="cov">
                 </div>
