--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <body style="background-color: #f7ce5f;">
             <div class="container-fluid"> 
                 <div class="col-sm-8 col-md-8 col-lg-6">
-                    <h1 class="hello" id="hi">Hi Daniel, I made you __________ :-)</h1>
+                    <h1 class="hello" id="hi">Hi Daniel, I made you _ ________ :-)</h1>
                     <h3 class="clickTxt">Click on it ---></h3>
 
                     <div class="pagination">    
